generated-tests/tests/snapshots/tsx/test_generated_variable_declaration.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
var variable1 = source2;

AST:
(program
  (variable_declaration
    (variable_declarator
      (identifier variable1)
      (identifier source2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "variable1",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "source2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 17,
            end_line: 1,
            end_column: 24,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
