generated-tests/tests/snapshots/tsx/test_generated_while_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
while (condition2) { break; }

AST:
(program
  (while_statement
    (parenthesized_expression
      (identifier condition2)
    )
    (statement_block
      (break_statement)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "condition2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 8,
            end_line: 1,
            end_column: 18,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
