generated-tests/tests/snapshots/tsx/test_generated_with_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
with (obj4) { prop7; }

AST:
(program
  (with_statement
    object: (parenthesized_expression
      (identifier "obj4")
    )
    body: (statement_block
      (expression_statement
        (identifier "prop7")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "obj4",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
        },
        Usage {
            name: "prop7",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 15,
                end_line: 1,
                end_column: 20,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
